<resources>
    <string name="app_name">Guess</string>
    <string name="ok">OK</string>
    <string name="tittle">Please enter a number</string>
    <string name="you_got_it">You got it</string>
    <string name="bigger">Bigger</string>
    <string name="smaller">Smaller</string>
    <string name="dialog_message">Message</string>
    <string name="title_activity_material">MaterialActivity</string>
</resources>
